--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/app.bundle.js",
-    "dev": "nodemon -c nodemon.json",
+    "start": "npx ts-node -T --project ./tsconfig.json src/index.ts",
     "docs": "npx swagger-jsdoc -d ./src/utils/swagger.js -o swagger.json 'src/routes/*.ts'",
     "lint": "eslint . --ext .ts --fix"
   },
